# packages/fake-caocao-server/openapi/provider/caocao-provider-minimal.openapi.yaml
@@ -178,15 +178,15 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/QueryDriverLocationSuccessResponse'
-  /common/queryDriverPolylineV2:
+  /common/queryDriverPolyline:
     post:
-      operationId: queryDriverPolylineV2
+      operationId: queryDriverPolyline
       requestBody:
         required: true
         content:
           application/x-www-form-urlencoded:
             schema:
-              $ref: '#/components/schemas/QueryDriverPolylineV2Request'
+              $ref: '#/components/schemas/QueryDriverPolylineRequest'
       responses:
         '200':
           description: Query driver polyline success
@@ -1166,11 +1166,12 @@ components:
           $ref: '#/components/schemas/DecimalString'
         waypointList:
           type: string
-    QueryDriverPolylineV2Request:
+    QueryDriverPolylineRequest:
       type: object
       additionalProperties: false
       required:
         - client_id
+        - navigation_polyline_type
         - order_id
         - sign
         - timestamp
@@ -1178,6 +1179,9 @@ components:
         client_id:
           type: string
           minLength: 1
+        navigation_polyline_type:
+          type: string
+          enum: ['1', '3']
         order_id:
           type: string
           minLength: 1
